fixed bugged question mark on homepage cards z-index

--- a/src/apps/content-editor/src/app/views/ItemEdit/Content/Actions/Widgets/WidgetListed/WidgetListed.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/Content/Actions/Widgets/WidgetListed/WidgetListed.less
@@ -2,4 +2,20 @@
   article {
     margin-bottom: 16px;
   }
+
+  .tipText {
+    z-index: 9;
+    &:hover {
+      small {
+        padding: 16px;
+        width: 14rem;
+        @media (min-width: 1200px) {
+          width: 18rem;
+        }
+        @media (min-width: 2000px) {
+          width: 25rem;
+        }
+      }
+    }
+  }
 }
